<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        style="@style/BottomSheetDialog.DragHandleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/OptionsHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options" />

    <com.google.android.material.card.MaterialCardView
        style="@style/Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sampleOption1"
                style="@style/Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/option_1" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/OptionsItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_1_text" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sampleOption2"
                style="@style/Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_2" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/OptionsItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_2_text" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sampleOption3"
                style="@style/Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_3" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/OptionsItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_3_text" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>