<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityMainCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activityMainAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScrollColor="@null">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/activityMainCollapsingToolbarLayout"
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            android:background="@color/colorBackground"
            app:collapsedTitleGravity="center"
            app:collapsedTitleTextColor="@color/colorCollapsedText"
            app:contentScrim="@color/colorBackgroundCollapse"
            app:expandedTitleTextAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            app:expandedTitleTextColor="@color/colorExpandedText"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:scrimAnimationDuration="50"
            app:statusBarScrim="@color/colorBackgroundCollapse"
            app:title="@string/screenshot_example"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/activityMainMaterialToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="40dp"
                app:layout_collapseMode="pin">

                <ImageView
                    android:id="@+id/activityMainSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginHorizontal="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/screenshot_settings_description"
                    android:padding="8dp"
                    android:src="@drawable/icon_cog_outline"
                    app:tint="@color/colorIconTint" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/activityMainNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/colorBackgroundCardBlue">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/welcome_to_the"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activityMainSampleTakeScreenshot"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_screenshot"
                app:icon="@drawable/cellphone_screenshot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activityMainSampleTakeScreenshotOpenLast"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/open_last_screenshot"
                app:icon="@drawable/view_gallery_outline" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/OptionsHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/screenshot_preview" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="0dp">

                <ImageView
                    android:id="@+id/activityMainSampleTakeScreenshotPreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/screenshot_preview_description" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/activityMainSampleTakeScreenshotPreviewText"
                    style="@style/TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="16dp"
                    android:text="@string/screenshot_preview_text"
                    app:drawableTopCompat="@drawable/cellphone_screenshot" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>